# watchtower

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  spec.txt  upgrades.md
agent/: analysis.py  breach.py  config.yaml  eval.py  html_builder.py  ingest.py  matrix.py  planning.py  rendering.py  runner.py  scoring.py  state.py  toolbelt.py  trajectory.py
reports/: .keep  briefing_2026-03-03_17-21.jsonl  briefing_2026-03-03_17-21.md  briefing_2026-03-03_17-22.md  briefing_2026-03-03_17-30.md  briefing_2026-03-04_17-36.jsonl  briefing_2026-03-04_18-22.jsonl  briefing_2026-03-04_18-22.md  briefing_2026-03-04_18-28.md  briefing_2026-03-04_19-04.jsonl  briefing_2026-03-04_19-04.md  briefing_2026-03-04_20-00.jsonl  briefing_2026-03-04_20-00.md  briefing_2026-03-04_21-39.jsonl  briefing_2026-03-04_22-11.jsonl  briefing_2026-03-04_22-11.md  briefing_2026-03-04_23-14.jsonl  briefing_2026-03-04_23-14.md  briefing_2026-03-04_23-51.jsonl  briefing_2026-03-04_23-51.md  briefing_2026-03-05_06-02.jsonl  briefing_2026-03-05_06-02.md  briefing_2026-03-05_11-48.jsonl  briefing_2026-03-05_11-48.md  briefing_2026-03-05_16-09.jsonl  briefing_2026-03-05_16-09.md  briefing_2026-03-18_20-53.jsonl  briefing_2026-03-18_22-42.jsonl  briefing_2026-03-19_10-56.jsonl  briefing_2026-03-19_22-40.jsonl  briefing_2026-03-20_10-52.jsonl  briefing_2026-03-20_22-40.jsonl  briefing_2026-03-21_10-39.jsonl  briefing_2026-03-21_22-37.jsonl  briefing_2026-03-22_10-39.jsonl  briefing_2026-03-22_22-38.jsonl  briefing_2026-03-23_22-46.jsonl  (+337 more)
(+32 files in other folders)
